# simLabs

./: CMakeLists.txt  ComptonDistribution.h  DistributionInterface.h  GaussianDistribution.h  Geant5.h  Histogram.h  LICENSE  README.md  main.cpp
distribution/: CMakeLists.txt  ComptonDistribution.cpp  ComptonDistribution.h  DiscreteDistribution.h  DiscreteDistribution.inl  DistributionInterface.cpp  DistributionInterface.h  ExpDistribution.cpp  ExpDistribution.h  ExpSuperpositionDistribution.cpp  ExpSuperpositionDistribution.h  GaussianDistribution.cpp  GaussianDistribution.h
histogram/: CMakeLists.txt  Histogram.h  Histogram.hpp
simulation/: CMakeLists.txt  Simulation.cpp  Simulation.h
